--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-asgiref==3.6.0
-distlib==0.3.6
-Django==4.2
-filelock==3.11.0
-platformdirs==3.2.0
-sqlparse==0.4.3
-tzdata==2023.3
-virtualenv==20.23.0
-virtualenvwrapper-win==1.2.7
+pip install whitenoise
+pip install pillow
+pip install channels
+pip install daphne
+pip install django-bootstrap-v5
